<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:id="@+id/root">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:textAllCaps="true"
                android:id="@+id/signup"
                android:textSize="@dimen/text_size"
                android:padding="@dimen/text_padding"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:fontFamily="sans-serif"
                android:background="@color/turquoise" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textAllCaps="true"
                android:id="@+id/login"
                android:textSize="@dimen/text_size"
                android:padding="@dimen/text_padding"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:fontFamily="sans-serif"
                android:background="@color/green" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_title"
                android:textAllCaps="true"
                android:id="@+id/about"
                android:textSize="@dimen/text_size"
                android:padding="@dimen/text_padding"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:fontFamily="sans-serif"
                android:background="@color/blue" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
