<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:id="@+id/root"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/signupbutton">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/username"
                android:padding="@dimen/text_padding"
                android:capitalize="characters"
                android:gravity="center"
                android:maxLength="140"
                android:hint="@string/username"
                android:digits="_,qwertzuiopasdfghjklyxcvbnm,QWERTYUIOPASDFGHJKLZXCVBNM,0123456789"
                android:textColorHint="@android:color/white"
                android:textSize="@dimen/text_size"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:background="@color/turquoise" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/password"
                android:fontFamily="sans-serif"
                android:hint="@string/password"
                android:textColorHint="@android:color/white"
                android:textSize="@dimen/text_size"
                android:padding="@dimen/text_padding"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:background="@color/green" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAllCaps="true"
                    android:text="@string/motherland"
                    android:id="@+id/motherland"
                    android:textSize="@dimen/text_size"
                    android:padding="@dimen/text_padding"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:background="@color/purple" />

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:padding="8dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:src="@drawable/corner" />

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textAllCaps="true"
        android:id="@+id/signupbutton"
        android:textSize="@dimen/text_size"
        android:padding="@dimen/text_padding"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:background="@color/blue"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="invisible"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scrollView"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username_taken"
        android:textAllCaps="true"
        android:id="@+id/takenButton"
        android:textSize="@dimen/text_size"
        android:padding="@dimen/text_padding"
        android:visibility="invisible"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:background="@color/red"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
