<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:id="@+id/root"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/username"
                android:padding="@dimen/text_padding"
                android:capitalize="characters"
                android:gravity="center"
                android:maxLength="140"
                android:hint="@string/username"
                android:digits="_,qwertzuiopasdfghjklyxcvbnm,QWERTYUIOPASDFGHJKLZXCVBNM,0123456789"
                android:textColorHint="@android:color/white"
                android:textSize="@dimen/text_size"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:background="@color/turquoise"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/password"
                android:hint="@string/password"
                android:textColorHint="@android:color/white"
                android:textSize="@dimen/text_size"
                android:padding="@dimen/text_padding"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:fontFamily="sans-serif"
                android:background="@color/green" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textAllCaps="true"
        android:id="@+id/loginbutton"
        android:textSize="@dimen/text_size"
        android:padding="@dimen/text_padding"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:background="@color/blue"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ProgressBar
        style="?android:attr/progressBarStyle"
        android:id="@+id/progressBar"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_alignTop="@+id/loginbutton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/try_again"
        android:textAllCaps="true"
        android:id="@+id/errorButton"
        android:textSize="@dimen/text_size"
        android:padding="@dimen/text_padding"
        android:gravity="center"
        android:textStyle="bold"
        android:visibility="invisible"
        android:textColor="@android:color/white"
        android:background="@color/red"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
